--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,6 +17,12 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: 1.15
+    - name: golangci-lint
+      uses: golangci/golangci-lint-action@v2
+      with:
+        version: v1.29
+        only-new-issues: true
+        # args: --issues-exit-code=0
     
     - name: Test
       run: make test
