--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,9 +2,9 @@ name: Go
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
 
@@ -17,6 +17,8 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: 1.15
+    - name: Checkout code
+      uses: actions/checkout@v2
     - name: golangci-lint
       uses: golangci/golangci-lint-action@v2
       with:
