--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,23 +10,18 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Set up Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: 1.15
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v2
-        with:
-          version: v1.29
-          only-new-issues: true
-          # args: --issues-exit-code=0
-      
-      - name: Test
-        run: make test
-
-      - name: Lint
-        run: make lint
+    - name: Install Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.15.x
+    - name: Checkout code
+      uses: actions/checkout@v2
+    - name: golangci-lint
+      uses: golangci/golangci-lint-action@v2
+      with:
+        version: v1.29
+        only-new-issues: true
+        args: --timeout 2m0s
+        # args: --issues-exit-code=0
+    - name: Unit tests
+      run: go test
