--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -3,9 +3,14 @@ name: Go
 on:
   push:
     branches: [ main ]
+    paths-ignore:
+      - "*.md"
+      - "LICENSE"
   pull_request:
     branches: [ main ]
-
+    paths-ignore:
+      - "*.md"
+      - "LICENSE"
 jobs:
   build:
     runs-on: ubuntu-latest
